ロードマップとシステム設計定義書更新

--- a/調子記録アプリ_システム設計定義書.md
+++ b/調子記録アプリ_システム設計定義書.md
@@ -1253,7 +1253,287 @@ AIによる質問生成、データ分析、アドバイス生成に使用。
 
 ---
 
-**文書バージョン**: 4.0  
-**作成日**: 2025年11月7日  
-**最終更新日**: 2025年11月28日  
-**更新内容**: Phase 4〜6完了、テスト・CI/CD・デプロイ完了、プロジェクト100%完了を反映
+---
+
+## 15. パフォーマンス最適化計画（Phase 7）
+
+### 15.1 最適化の目標
+
+**目標値**:
+- ページ読み込み時間を50%短縮
+- API応答時間を30%短縮
+- バンドルサイズを40%削減
+- Lighthouse スコア90以上達成
+
+**計測基準**:
+- LCP（Largest Contentful Paint）: < 2.5秒
+- FID（First Input Delay）: < 100ms
+- CLS（Cumulative Layout Shift）: < 0.1
+- TTI（Time to Interactive）: < 4秒
+
+---
+
+### 15.2 フロントエンド最適化
+
+#### 15.2.1 コード分割（Code Splitting）
+
+**実装内容**:
+```typescript
+// App.tsx
+import { lazy, Suspense } from 'react';
+
+const Dashboard = lazy(() => import('./components/Dashboard'));
+const RecordForm = lazy(() => import('./components/RecordForm'));
+const AnalysisForm = lazy(() => import('./components/AnalysisForm'));
+const AdviceHistory = lazy(() => import('./components/AdviceHistory'));
+const RecordList = lazy(() => import('./components/RecordList'));
+const RecordDetail = lazy(() => import('./components/RecordDetail'));
+
+// Suspenseでラップ
+<Suspense fallback={<div className="loading">読み込み中...</div>}>
+  <Routes>
+    <Route path="/dashboard" element={<Dashboard />} />
+    <Route path="/record" element={<RecordForm />} />
+    {/* ... */}
+  </Routes>
+</Suspense>
+```
+
+**期待される効果**:
+- 初期バンドルサイズ: 800KB → 480KB（40%削減）
+- 初期ロード時間: 3秒 → 1.5秒（50%短縮）
+- Time to Interactive: 4秒 → 2秒
+
+**実装優先度**: 高
+
+---
+
+#### 15.2.2 画像最適化
+
+**実装内容**:
+1. WebP形式への変換
+2. `loading="lazy"`属性の追加
+3. レスポンシブ画像の実装
+4. 画像圧縮ツールの導入
+
+**実装例**:
+```html
+<picture>
+  <source srcset="image.webp" type="image/webp">
+  <img src="image.jpg" alt="説明" loading="lazy">
+</picture>
+```
+
+**期待される効果**:
+- 画像サイズ: 2MB → 600KB（70%削減）
+- LCP: 2.5秒 → 1.5秒
+
+**実装優先度**: 中
+
+---
+
+#### 15.2.3 キャッシュ戦略
+
+**実装内容**:
+1. Service Worker実装の検討
+2. React Queryによるデータキャッシング
+3. Static Assets のブラウザキャッシュ設定
+4. stale-while-revalidate戦略
+
+**React Query導入例**:
+```typescript
+import { useQuery } from '@tanstack/react-query';
+
+function Dashboard() {
+  const { data, isLoading } = useQuery({
+    queryKey: ['records'],
+    queryFn: getRecords,
+    staleTime: 5 * 60 * 1000, // 5分
+  });
+}
+```
+
+**期待される効果**:
+- リピート訪問時のロード時間: 3秒 → 1.2秒（60%短縮）
+- API呼び出し削減: 80%削減
+
+**実装優先度**: 中
+
+---
+
+### 15.3 バックエンド最適化
+
+#### 15.3.1 データベースクエリ最適化
+
+**実装内容**:
+1. スロークエリの特定
+2. インデックスの追加・最適化
+3. N+1問題の解決
+4. クエリのバッチ処理
+
+**推奨インデックス**:
+```sql
+-- ユーザーの記録取得用（複合インデックス）
+CREATE INDEX idx_records_user_id_recorded_at 
+ON records(user_id, recorded_at DESC);
+
+-- 分析用
+CREATE INDEX idx_analysis_answers_user_id_recorded_at 
+ON analysis_answers(user_id, recorded_at);
+
+-- アドバイス履歴用
+CREATE INDEX idx_advice_history_user_id_created_at 
+ON advice_history(user_id, created_at DESC);
+
+-- 気象データ用
+CREATE INDEX idx_weather_data_user_id_recorded_at 
+ON weather_data(user_id, recorded_at DESC);
+```
+
+**クエリ最適化例**:
+```typescript
+// Before: N+1問題
+const records = await RecordModel.findAll();
+for (const record of records) {
+  record.weather = await WeatherModel.findByRecordId(record.id);
+}
+
+// After: JOINで一括取得
+const records = await pool.query(`
+  SELECT r.*, w.temperature, w.humidity, w.weather_condition
+  FROM records r
+  LEFT JOIN weather_data w ON r.user_id = w.user_id 
+    AND DATE(r.recorded_at) = DATE(w.recorded_at)
+  WHERE r.user_id = $1
+  ORDER BY r.recorded_at DESC
+`, [userId]);
+```
+
+**期待される効果**:
+- クエリ応答時間: 500ms → 150ms（70%短縮）
+- 複雑なクエリ: 2秒 → 600ms（70%短縮）
+
+**実装優先度**: 高
+
+---
+
+#### 15.3.2 APIレスポンス最適化
+
+**実装内容**:
+1. ページネーション実装
+2. レスポンスデータの最小化
+3. gzip圧縮の有効化
+4. キャッシュヘッダーの設定
+
+**ページネーション実装例**:
+```typescript
+// GET /api/records?page=1&limit=10
+app.get('/api/records', async (req, res) => {
+  const page = parseInt(req.query.page) || 1;
+  const limit = parseInt(req.query.limit) || 10;
+  const offset = (page - 1) * limit;
+  
+  const records = await RecordModel.findByUserId(userId, limit, offset);
+  const total = await RecordModel.countByUserId(userId);
+  
+  res.json({
+    data: records,
+    pagination: {
+      page,
+      limit,
+      total,
+      totalPages: Math.ceil(total / limit)
+    }
+  });
+});
+```
+
+**gzip圧縮**:
+```typescript
+import compression from 'compression';
+app.use(compression());
+```
+
+**期待される効果**:
+- レスポンスサイズ: 500KB → 200KB（60%削減）
+- API応答時間: 800ms → 400ms（50%短縮）
+
+**実装優先度**: 高
+
+---
+
+### 15.4 パフォーマンス計測とモニタリング
+
+#### 15.4.1 Lighthouse CI統合
+
+**実装内容**:
+```yaml
+# .github/workflows/lighthouse.yml
+name: Lighthouse CI
+
+on:
+  pull_request:
+    branches: [main]
+
+jobs:
+  lighthouse:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Lighthouse CI
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          urls: |
+            https://your-app.vercel.app
+          uploadArtifacts: true
+```
+
+---
+
+#### 15.4.2 Web Vitals計測
+
+**実装内容**:
+```typescript
+// src/reportWebVitals.ts
+import { getCLS, getFID, getFCP, getLCP, getTTFB } from 'web-vitals';
+
+function sendToAnalytics(metric: any) {
+  console.log(metric);
+  // 実際の分析ツールに送信
+}
+
+getCLS(sendToAnalytics);  // Cumulative Layout Shift
+getFID(sendToAnalytics);  // First Input Delay
+getFCP(sendToAnalytics);  // First Contentful Paint
+getLCP(sendToAnalytics);  // Largest Contentful Paint
+getTTFB(sendToAnalytics); // Time to First Byte
+```
+
+---
+
+### 15.5 最適化のロードマップ
+
+| Week | タスク | 優先度 | 期待効果 |
+|------|--------|--------|----------|
+| Week 1 | コード分割実装 | 高 | バンドルサイズ40%削減 |
+| Week 1 | データベースインデックス追加 | 高 | クエリ70%高速化 |
+| Week 2 | APIページネーション実装 | 高 | レスポンス60%削減 |
+| Week 2 | gzip圧縮有効化 | 高 | 転送量50%削減 |
+| Week 2 | 画像最適化 | 中 | LCP40%改善 |
+| Week 2 | Lighthouse CI統合 | 中 | 継続的監視 |
+| Week 3 | React Query導入 | 中 | キャッシュ効率化 |
+| Week 3 | パフォーマンスダッシュボード | 低 | 可視化 |
+
+---
+
+### 15.6 実装予定日
+
+**開始予定**: 2024年12月初旬  
+**完了予定**: 2024年12月中旬（約2週間）
+
+---
+
+**文書バージョン**: 5.0  
+**作成日**: 2024年11月7日  
+**最終更新日**: 2024年12月1日  
+**更新内容**: Phase 7（パフォーマンス最適化計画）追加
